#35 add interface for interactive run of training
